--- a/mockpage/style.css
+++ b/mockpage/style.css
@@ -62,6 +62,9 @@ margin-left: 30px;
 .navigation-dot li:hover, .navigation-dot li.selected li {
   background: none;
   transform: scale(2);
+
+}.navigation-dot .home-icon:hover {
+  transform: scale(2);
 }
 
 li.selected {
@@ -109,6 +112,10 @@ a, p {
   z-index: 10;
 }
 
+.senk {
+  transform: translate(0, 35%);
+  width: 40%;
+}
 
 p.a, p.b, li{
   font-family: futura-pt,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
@@ -126,20 +133,44 @@ p{
 margin-bottom: 10px;
 }
 
+.senk1{
+  width: 40%;
+}
+
+.senk2{
+  transform: translate(0, 21%);
+  width: 40%;
+}
+
+.senk4{
+  transform: translate(0, 16%);
+  width: 40%;
+}
+
+
 .about-us{
  padding-top: 10px;
 }
 
 .card-karen {
-  transform: translate(-150px,0);
+  transform: translate(-150px,-120px);
   background: white;
   border-radius: 5%;
 }
 
 .card-jokke {
-  transform: translate(150px,0);
+  transform: translate(150px,-120px);
   background: white;
   border-radius: 5%;
+}
+
+#introtext  {
+  transform: translate(-50%, -300%);
+}
+
+.tiltoppen {
+  text-align: right;
+  margin-right: 1rem;
 }
 
 
@@ -177,34 +208,6 @@ margin-top: 5px;
   margin-bottom: auto;
 }
 
-.accordion {
-  background-color: #376d9a;
-  color: white;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 16px;
-  font-style: italic;
-  transition: 0.4s;
-  line-height: 1.45em;
- 
-}
-
-.active, .accordion:hover {
-  background-color: #285376; 
- 
-}
-
-.panel {
-  padding: 0 18px;
-  display: none;
-  background-color:#4682B4 ;
-  overflow: hidden;
-  
-}
 
 .header {
   background: var(--dark-bg); /* svart bakgrunn på header*/
@@ -329,6 +332,18 @@ content: '';
   width: 100px;
   height: 100px;
   text-align: center;
+}
+
+.button {
+  position: relative;
+  z-index: 99;
+}
+
+.hide {
+  display:none;
+}
+.show {
+  display:block;
 }
 
 
